Added more seqwit features